--- a/Dormitory Services/templates/other_page.html
+++ b/Dormitory Services/templates/other_page.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Data from MongoDB</title>
 </head>
 
@@ -15,34 +17,27 @@
     <br>
     {% include 'navbar.html' %}
     <br><br><br><br>
-    <div class="container">
-        <div class="row">
-            {% for item in items %}
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="{{ item['imageUrl'] }}" class="card-img-top" alt="{{ item['name'] }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ item['name'] }}</h5>
-                        <p class="card-text">Address: {{ item['address'] }}</p>
-                        <p class="card-text">Monthly rent: {{ item['price'] }}</p>
-                        <p class="card-text">Available Room: {{ item['numberOfRoomsAvailable'] }}</p>
-                        <a href="{{ url_for('dormitory_bp.other_page', item_id=item['_id']) }}" class="btn btn-primary">View</a>
-                        {% if item['numberOfRoomsAvailable'] > 0 %}
-                        <form action="{{ url_for('dormitory_bp.book_room', item_id=item['_id']) }}" method="POST" class="d-inline">
-                            <button type="submit" class="btn btn-success">Book</button>
-                        </form>
-                        {% else %}
-                        <button class="btn btn-danger" disabled>No rooms available</button>
-                        {% endif %}
-                    </div>
-                </div>
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="card" style="max-width: 600px;">
+            <img src="{{ item['imageUrl'] }}" class="card-img-top" alt="{{ item['name'] }}">
+            <div class="card-body">
+                <h3 class="card-title">{{ item['name'] }}</h3>
+                <p class="card-text">Description: {{ item['description'] }}</p>
+                <p class="card-text">Address: {{ item['address'] }}</p>
+                <p class="card-text">Monthly rent: {{ item['price'] }}</p>
+                <p class="card-text">Contact: {{ item['contact'] }}</p>
+                <p class="card-text">Available Room: {{ item['numberOfRoomsAvailable'] }}</p>
+                <a href="{{ url_for('index') }}" class="btn btn-primary">Back</a>
             </div>
-            {% endfor %}
         </div>
     </div>
     <br><br><br><br><br><br>
-    <footer class="footer text-white" style="height: 70px; line-height: 70px;">
-        <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+    <i class="bi bi-arrow-up-circle-fill" id="goToTopBtn" onclick="goToTop()"></i>
+    <footer class="footer py-2 text-white">
+        <div class="container text-center">
+            <span class="text">All content © 2024 The Microservice, ECT-R21</span><br>
+            <span class="text">Dormitory Website, Max Mongkol Thailand 4, 20000 Dubrovnik</span>
+        </div>
     </footer>
 </body>
 
